# pygieons

./: .gitignore  CHANGELOG.md  CNAME  MANIFEST.in  README.md  all-tools.html  contributing.html  generic-libraries.html  genindex.html  index.html  objects.inv  pygieons.html  pyproject.toml  raster-libraries.html  search.html  searchindex.js  setup.cfg  vector-libraries.html
.github/workflows/: build_website.yml
_sources/: all-tools.ipynb.txt  generic-libraries.ipynb.txt  index.rst.txt  raster-libraries.ipynb.txt  vector-libraries.ipynb.txt
_static/: pythongis-ecosystem-large.html
ci/: environment.yaml
docs/: all-tools.ipynb  conf.py  contributing.ipynb  generic-libraries.ipynb  index.rst  pygieons.ipynb  python-gis-ecosystem.ipynb  raster-libraries.ipynb  requirements.txt  vector-libraries.ipynb
docs/_static/: pythongis-ecosystem.html
src/pygieons/: __init__.py  ecosystem_connections.py  ecosystem_pkgs.py  pygieons.py
tests/: test_pygieons.py
