[metadata]
name = pygieons

version = attr: pygieons.__version__
license = MIT

description = A simple package to visualize and keep track of GIS and Earth Observation libraries in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pygieons/pygieons
project_urls =
    Documentation = https://pygieons.readthedocs.org/
    Change Log = https://github.com/pygieons/pygieons/blob/main/CHANGELOG.md
    Bug Tracker = https://github.com/pygieons/pygieons/issues

author = Henrikki Tenkanen and contributors
author_email = henrikki.tenkanen@aalto.fi

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8
install_requires =
    numpy
    palettable
    pandas
    pyvis
    tqdm
test_requires =
    pytest
    pytest-cov

[options.packages.find]
where = src
include = *
